--- a/backend/services/api-gateway/Dockerfile
+++ b/backend/services/api-gateway/Dockerfile
@@ -4,10 +4,11 @@ COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 RUN go mod tidy
-RUN CGO_ENABLED=0 GOOS=linux go build -o /out/service ./cmd/service
+RUN CGO_ENABLED=0 GOOS=linux go build -o /out/api-gateway ./cmd/service
 
 FROM alpine:3.20
 WORKDIR /app
-COPY --from=build /out/service /app/service
+COPY --from=build /out/api-gateway /app/api-gateway
+COPY --from=build /app/openapi.yaml /app/openapi.yaml
 EXPOSE 8080
-CMD ["/app/service"]
+CMD ["/app/api-gateway"]
