--- a/backend/services/auth-service/.env.example
+++ b/backend/services/auth-service/.env.example
@@ -1,1 +1,20 @@
 PORT=3001
+DATABASE_URL=postgres://musicroom:musicroom@postgres:5432/musicroom?sslmode=disable
+
+# JWT settings
+JWT_SECRET=change-me-in-dev
+ACCESS_TOKEN_TTL=15m
+REFRESH_TOKEN_TTL=720h
+
+# OAuth2 Google
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URL=http://localhost:3001/auth/google/callback
+
+# OAuth2 42 (Intra)
+FT_CLIENT_ID=your-42-client-id
+FT_CLIENT_SECRET=your-42-client-secret
+FT_REDIRECT_URL=http://localhost:3001/auth/42/callback
+
+# Frontend URL used after OAuth callbacks and email flows
+OAUTH_FRONTEND_REDIRECT=http://localhost:5175/auth/callback
