--- a/backend/services/auth-service/Dockerfile
+++ b/backend/services/auth-service/Dockerfile
@@ -4,10 +4,10 @@ COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 RUN go mod tidy
-RUN CGO_ENABLED=0 GOOS=linux go build -o /out/service ./cmd/service
+RUN CGO_ENABLED=0 GOOS=linux go build -o /out/auth-service ./cmd/service
 
 FROM alpine:3.20
 WORKDIR /app
-COPY --from=build /out/service /app/service
+COPY --from=build /out/auth-service /app/auth-service
 EXPOSE 3001
-CMD ["/app/service"]
+CMD ["/app/auth-service"]
