--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,10 @@
 FROM golang:1.22.0-alpine AS build
 WORKDIR /app
 COPY . .
-RUN go build -o /out/server ./cmd/server
+RUN go build -o /out/frontend ./cmd/server
 
 FROM alpine:3.20
 WORKDIR /app
-COPY --from=build /out/server /app/server
-# env можно править через compose:
-# ENV API_URL=http://localhost:8080
-# ENV WS_URL=ws://localhost:3004/ws
+COPY --from=build /out/frontend /app/frontend
 EXPOSE 5175
-CMD ["/app/server"]
+CMD ["/app/frontend"]
