--- a/backend/services/playlist-service/Dockerfile
+++ b/backend/services/playlist-service/Dockerfile
@@ -4,10 +4,10 @@ COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 RUN go mod tidy
-RUN CGO_ENABLED=0 GOOS=linux go build -o /out/service ./cmd/service
+RUN CGO_ENABLED=0 GOOS=linux go build -o /out/playlist-service ./cmd/service
 
 FROM alpine:3.20
 WORKDIR /app
-COPY --from=build /out/service /app/service
+COPY --from=build /out/playlist-service /app/playlist-service
 EXPOSE 3002
-CMD ["/app/service"]
+CMD ["/app/playlist-service"]
