--- a/backend/services/realtime-service/Dockerfile
+++ b/backend/services/realtime-service/Dockerfile
@@ -4,10 +4,10 @@ COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 RUN go mod tidy
-RUN CGO_ENABLED=0 GOOS=linux go build -o /out/service ./cmd/service
+RUN CGO_ENABLED=0 GOOS=linux go build -o /out/realtime-service ./cmd/service
 
 FROM alpine:3.20
 WORKDIR /app
-COPY --from=build /out/service /app/service
+COPY --from=build /out/realtime-service /app/realtime-service
 EXPOSE 3004
-CMD ["/app/service"]
+CMD ["/app/realtime-service"]
