--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,8 +91,8 @@ services:
 
   mock-service:
     build: ./backend/services/mock-service
-    environment:
-      PORT: 3006
+    env_file:
+      - ./backend/services/mock-service/.env
     ports:
       - "3006:3006"
 
