finiched auth-service

--- a/backend/services/auth-service/.env.example
+++ b/backend/services/auth-service/.env.example
@@ -18,3 +18,12 @@ FT_REDIRECT_URL=http://localhost:8080/auth/42/callback
 
 # Frontend URL used after OAuth callbacks and email flows
 OAUTH_FRONTEND_REDIRECT=http://localhost:5175/auth/callback
+
+EMAIL_VERIFICATION_URL=http://localhost:8080/auth/verify-email
+PASSWORD_RESET_URL=http://localhost:8080/auth/reset-password
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER="your.user@gmail.com"
+SMTP_PASS="your-app-password-here"
+SMTP_FROM="Your Service MusicRoom"
