--- a/backend/services/vote-service/.env.example
+++ b/backend/services/vote-service/.env.example
@@ -1,3 +1,4 @@
 PORT=3003
 DATABASE_URL=postgres://musicroom:musicroom@postgres:5432/musicroom?sslmode=disable
 REDIS_URL=redis://redis:6379
+USER_SERVICE_URL=http://user-service:3005
