--- a/backend/services/auth-service/.env.example
+++ b/backend/services/auth-service/.env.example
@@ -18,6 +18,7 @@ FT_REDIRECT_URL=http://localhost:8080/auth/42/callback
 
 # Frontend URL used after OAuth callbacks and email flows
 OAUTH_FRONTEND_REDIRECT=http://localhost:5175/auth/callback
+FRONTEND_BASE_URL=http://localhost:5175
 
 EMAIL_VERIFICATION_URL=http://localhost:8080/auth/verify-email
 PASSWORD_RESET_URL=http://localhost:8080/auth/reset-password
