new music-provider-service

--- a/backend/services/api-gateway/.env.example
+++ b/backend/services/api-gateway/.env.example
@@ -8,6 +8,7 @@ PLAYLIST_SERVICE_URL=http://playlist-service:3002
 VOTE_SERVICE_URL=http://vote-service:3003
 MOCK_SERVICE_URL=http://mock-service:3006
 REALTIME_SERVICE_URL=http://realtime-service:3004
+MUSIC_PROVIDER_SERVICE_URL=http://music-provider-service:3007
 
 # JWT secret must be the same as in auth-service
 JWT_SECRET=supersecretdev
