redis.Client + YOUTUBE_API_KEY

--- a/backend/services/music-provider-service/.env.example
+++ b/backend/services/music-provider-service/.env.example
@@ -1,2 +1,4 @@
 PORT=3007
-YOUTUBE_API_KEY=
+YOUTUBE_API_KEY=your-google-client-id
+REDIS_URL=redis://redis:6379
+YOUTUBE_SEARCH_URL=https://www.googleapis.com/youtube/v3/search
