--- a/backend/services/api-gateway/.env.example
+++ b/backend/services/api-gateway/.env.example
@@ -18,3 +18,8 @@ RATE_LIMIT_RPS=20
 
 # CORS
 CORS_ALLOWED_ORIGIN=*
+
+# CERTS
+# TLS_ENABLED=true
+# TLS_CERT_FILE=/certs/cert.pem
+# TLS_KEY_FILE=/certs/key.pem
