--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,8 @@
 API_URL=http://localhost:8080
 WS_URL=ws://localhost:3004/ws
 PORT=5175
+
+# # CERTS
+# TLS_ENABLED=true
+# TLS_CERT_FILE=/certs/cert.pem
+# TLS_KEY_FILE=/certs/key.pem
