--- a/backend/services/api-gateway/.env.example
+++ b/backend/services/api-gateway/.env.example
@@ -18,6 +18,8 @@ RATE_LIMIT_RPS=20
 
 # CORS
 CORS_ALLOWED_ORIGIN=*
+# CORS_ALLOWED_ORIGIN=http://localhost:5175 // Обязательно поменять на проверке , но при условии, что мы можем в dev использовать localhost, без внутреннего url
+
 
 # CERTS
 # TLS_ENABLED=true
