tests for api-gateway

--- a/backend/services/api-gateway/.env.example
+++ b/backend/services/api-gateway/.env.example
@@ -18,7 +18,7 @@ RATE_LIMIT_RPS=20
 
 # CORS
 CORS_ALLOWED_ORIGIN=*
-# CORS_ALLOWED_ORIGIN=http://localhost:5175 // Обязательно поменять на проверке , но при условии, что мы можем в dev использовать localhost, без внутреннего url
+# CORS_ALLOWED_ORIGIN=http://localhost:5175 // нужно поставить для теста на localhost
 
 
 # CERTS
