add backend preset avatars and random avatar endpoint; finalize frontend integration

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ Tuist/Cache/
 
 # Node / Package managers
 node_modules/
+
+# Avatars user
+/backend/services/user-service/avatars/custom/*
+
+# other files
+*.txt
