--- a/backend/services/api-gateway/.env.example
+++ b/backend/services/api-gateway/.env.example
@@ -20,6 +20,7 @@ RATE_LIMIT_RPS=20
 CORS_ALLOWED_ORIGIN=*
 # CORS_ALLOWED_ORIGIN=http://localhost:5175 // нужно поставить для теста на localhost
 
+AVATAR_UPLOAD_RPS=5
 
 # CERTS
 # TLS_ENABLED=true
