--- a/backend/services/user-service/Dockerfile
+++ b/backend/services/user-service/Dockerfile
@@ -9,5 +9,6 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o /out/user-service ./cmd/service
 FROM alpine:3.20
 WORKDIR /app
 COPY --from=build /out/user-service /app/user-service
+COPY --from=build /app/avatars /app/avatars
 EXPOSE 3005
 CMD ["/app/user-service"]
