--- a/backend/services/user-service/.env.example
+++ b/backend/services/user-service/.env.example
@@ -1,4 +1,4 @@
 PORT=3005
 DATABASE_URL=postgres://musicroom:musicroom@postgres:5432/musicroom?sslmode=disable
 AVATAR_DIR=./avatars
-DEFAULT_AVATAR_URL=/avatars/default.svg
+DEFAULT_AVATAR_URL=/avatars/default.png
