test: add basic tests for main packages to fix 0% coverage reporting

--- a/mobile/Makefile
+++ b/mobile/Makefile
@@ -17,12 +17,13 @@ build:
 
 test:
 	rm -rf TestResults.xcresult
-	xcodebuild test \
+	set -o pipefail && xcodebuild test \
 		-workspace $(WORKSPACE) \
 		-scheme $(SCHEME) \
 		-destination $(DESTINATION) \
 		-enableCodeCoverage YES \
-		-resultBundlePath TestResults.xcresult
+		-resultBundlePath TestResults.xcresult \
+		| xcbeautify
 
 clean:
 	xcodebuild clean \
