refactor router, config and OpenAPI fixes

--- a/backend/services/api-gateway/.env.example
+++ b/backend/services/api-gateway/.env.example
@@ -1,11 +1,11 @@
-GATEWAY_PORT=8080
+PORT=8080
 OPENAPI_FILE=openapi.yaml
 
 # Internal services URLs (inside docker-compose network)
 AUTH_SERVICE_URL=http://auth-service:3001
 USER_SERVICE_URL=http://user-service:3005
-PLAYLIST_SERVICE_URL=http://playlist-service:3002
 VOTE_SERVICE_URL=http://vote-service:3003
+PLAYLIST_SERVICE_URL=http://playlist-service:3002
 MOCK_SERVICE_URL=http://mock-service:3006
 REALTIME_SERVICE_URL=http://realtime-service:3004
 MUSIC_PROVIDER_SERVICE_URL=http://music-provider-service:3007
@@ -20,7 +20,11 @@ RATE_LIMIT_RPS=20
 CORS_ALLOWED_ORIGIN=*
 # CORS_ALLOWED_ORIGIN=http://localhost:5175 // нужно поставить для теста на localhost
 
+# limit
+USER_PATCH_BODY_LIMIT=4096
+USER_PATCH_RPS=5
 AVATAR_UPLOAD_RPS=5
+FRIEND_REQUEST_RPS=5
 
 # CERTS
 # TLS_ENABLED=true
