--- a/backend/services/auth-service/.env.example
+++ b/backend/services/auth-service/.env.example
@@ -2,7 +2,7 @@ PORT=3001
 DATABASE_URL=postgres://musicroom:musicroom@postgres:5432/musicroom?sslmode=disable
 
 # JWT settings
-JWT_SECRET=supersecretdev
+JWT_SECRET=
 ACCESS_TOKEN_TTL=15m
 REFRESH_TOKEN_TTL=720h
 
