--- a/backend/services/api-gateway/.env.example
+++ b/backend/services/api-gateway/.env.example
@@ -12,14 +12,14 @@ MUSIC_PROVIDER_SERVICE_URL=http://music-provider-service:3007
 FRONTEND_BASE_URL=http://localhost:5175
 
 # JWT secret must be the same as in auth-service
-JWT_SECRET=supersecretdev
+JWT_SECRET=
 
 # Simple per-IP rate limit in requests per second
 RATE_LIMIT_RPS=20
 
 # CORS
 CORS_ALLOWED_ORIGIN=*
-# CORS_ALLOWED_ORIGIN=http://localhost:5175 // нужно поставить для теста на localhost
+# CORS_ALLOWED_ORIGIN=http://localhost:5175 // for localhost
 
 # limit
 USER_PATCH_BODY_LIMIT=4096
@@ -37,4 +37,4 @@ MUSIC_AUTHED_RPS=30
 # TLS_KEY_FILE=/certs/key.pem
 
 TRUSTED_PROXY_CIDRS=127.0.0.1/32,::1/128,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-# TRUSTED_PROXY_CIDRS=10.0.0.0/8 // для теста на localhost
+# TRUSTED_PROXY_CIDRS=10.0.0.0/8 
