--- a/backend/services/api-gateway/.env.example
+++ b/backend/services/api-gateway/.env.example
@@ -18,8 +18,8 @@ JWT_SECRET=
 RATE_LIMIT_RPS=20
 
 # CORS
-CORS_ALLOWED_ORIGIN=*
-# CORS_ALLOWED_ORIGIN=http://localhost:5175 // for localhost
+# CORS_ALLOWED_ORIGIN=*
+CORS_ALLOWED_ORIGIN=http://localhost:5175
 
 # limit
 USER_PATCH_BODY_LIMIT=4096
